# instructor_intro

./: .env  .gitignore  document.md  instructor_intro.ipynb  pyproject.toml  requirements.txt
